--- a/doggyYears.html
+++ b/doggyYears.html
@@ -1,31 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<script>
-// myAge assignment is my age in real life
-let myAge = 3;
-
-// early years of a dog
-let earlyYears = 2;
-
-earlyYears = 2 * 10.5;
-
-// sisa dari earlyYears
-let laterYears = myAge - earlyYears;
-
-// nilai dari laterYears of a dog
-laterYears *= 4;
-
-console.log(earlyYears);
-console.log(laterYears);
-
-// my age in dog years formula
-let myAgeInDogYears = earlyYears + laterYears;
-
-// state my name and lowercase it
-myName = 'Berry'.toLowerCase();
-
-console.log(`My name is ${myName}. I am ${myAge} years old in human years which is ${myAgeInDogYears} years old in dog years.`)
+<head X-Content-Type-Options:nosniff>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta X-Content-Type-Options="nosniff" http-equiv="Content-Type">
+<script src="doggyYears.js">
+console.log('I am pointless as I will not be executed');
 </script>
+</head>
+<title>
+</title>
 <body>
 </body>
 </html>
