--- a/basicTriangle.html
+++ b/basicTriangle.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8" http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="magicEightBall.js">
+<script src="basicTriangle.js">
 console.log('I am pointless as I will not be executed');
 </script>
 </head>
 <title>
-This is an eight magic ball code.
+This is a basic triangle code.
 </title>
 <body>
 </body>
