--- a/magicEightBall.html
+++ b/magicEightBall.html
@@ -1,14 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<head>
-	<meta charset="UTF-8" http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="magicEightBall.js">
-console.log('I am pointless as I will not be executed');
-</script>
-</head>
-<title>
-This is an eight magic ball code.
-</title>
-<body>
-</body>
-</html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1.0">
+			<script src="magicEightBall.js">console.log('I am pointless as I will not be executed');</script>
+		</head>
+		<title>This is an eight magic ball code.</title>
+		<body/>
+	</html>
