--- a/liar.html
+++ b/liar.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<head>
-	<meta charset="UTF-8" http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="liar.js">
-console.log('I am pointless as I will not be executed');
-</script>
-</head>
-<title>
-This a liar code.
-</title>
-<body>
-</body>
-</html>
+	<head>
+		<meta charset="UTF-8" http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1.0">
+			<script src="liar.js">console.log('I am pointless as I will not be executed');</script>
+		</head>
+		<title>This a liar code.</title>
+		<body/>
+	</html>
